setting scsss folders and files structure

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -83,4 +83,4 @@ body {
 // 	border-spacing: 0;
 // 	background-color: aliceblue;
 // }
-@import './styles/scss/main.scss';
+@import '../styles/scss/main.scss';
