--- a/styles/scss/elements/_base.scss
+++ b/styles/scss/elements/_base.scss
@@ -2,11 +2,18 @@
     box-sizing: border-box;
 }
 
-// body {
-//     font-family: $font-nunito;
-//     }
-
-// .container {
-//     margin: 0 auto;
-//     width: 1200px;
+// html {
+//     font-family: var(--font-inter);
 // }
+
+body {
+    // font-family: $font-nunito;
+    background: rgb(77,82,96);
+    background: linear-gradient(127deg, rgba(77,82,96,1) 0%, rgba(20,29,51,1) 22%, rgba(15,22,40,1) 39%, rgba(5,10,22,1) 100%);
+    height: 100vh;
+}
+
+.container {
+    margin: 0 auto;
+    width: 1200px;
+}
