--- a/styles/scss/settings/_colors.scss
+++ b/styles/scss/settings/_colors.scss
@@ -1,6 +1,6 @@
-$color-grey: #8E9696; //fonts
-$color-black: #213131; //fonts
-//$color-white: #FFFFFF; //fonts and background
+//$color-grey: #8E9696; //fonts
+//$color-black: #213131; //fonts
+$color-white: #FFFFFF; //fonts and background
 //$color-white-secondary: #FAFAFA; //some fonts ex. in slider
 //$color-background: #E5E5E5; //background color
 //$color-light-grey: #D6D6D6; //decoration lines
