--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -10,6 +10,7 @@
 /* Elements */
 //@import "elements/fonts";
 @import "elements/base";
+@import "elements/navigation";
 //@import "elements/header";
 // @import "elements/hero";
 // @import "elements/hamburger";
