--- a/styles/scss/elements/_navigation.scss
+++ b/styles/scss/elements/_navigation.scss
@@ -7,7 +7,46 @@
     padding: 0 0.5rem;
     color: $color-white;
     font-size: 1.25rem;
+    
+    &-container{
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    li{
+        a{
+            color:$color-white;
+            text-decoration: none;
+        }
+    }
 }
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: $color-white;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+
+.change {
+    .bar1{
+        transform: translate(0, 11px) rotate(-45deg);
+    }
+
+    .bar2{
+        opacity: 0;
+    }
+
+    .bar3{
+        transform: translate(0, -11px) rotate(45deg);
+    }
+}
+
+.active {
+    color: red; /* Kolor dla aktywnej ścieżki */
+    font-weight: bold; /* Dodaj inne style według potrzeb */
+  }
 
 .logo{
     font-weight: bold;
