--- a/styles/scss/settings/_mixins.scss
+++ b/styles/scss/settings/_mixins.scss
@@ -1,17 +1,17 @@
-// @mixin notebook {
-//     @media (max-width: 1439px) {
-//       @content;
-//     }
-//   }
+@mixin notebook {
+    @media (max-width: 1439px) {
+      @content;
+    }
+  }
   
-// @mixin tablet {
-//     @media (max-width: 1024px) {
-//       @content;
-//     }
-//   }
+@mixin tablet {
+    @media (max-width: 1024px) {
+      @content;
+    }
+  }
   
-// @mixin mobile {
-//     @media (max-width: 792px) {
-//       @content;
-//     }
-//   }
+@mixin mobile {
+    @media (max-width: 768px) {
+      @content;
+    }
+  }
