info section and planet section

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -11,6 +11,8 @@
 //@import "elements/fonts";
 @import "elements/base";
 @import "elements/navigation";
+@import "elements/infoSection";
+@import "elements/sliderSection";
 //@import "elements/header";
 // @import "elements/hero";
 // @import "elements/hamburger";
