--- a/styles/scss/elements/_base.scss
+++ b/styles/scss/elements/_base.scss
@@ -11,7 +11,7 @@ body {
     background: rgb(15,22,40,1);
     background: linear-gradient(127deg, rgba(77,82,96,1) 0%, rgba(20,29,51,1) 22%, rgba(15,22,40,1) 39%, rgba(5,10,22,1) 100%);
     //height: calc(100vh + 8.875rem);
-    //height: 100vh;
+    //height: 1080px;
     // &::after{
     //             content: "";
     //             display: block;
@@ -49,15 +49,25 @@ body {
 
 h1{
     font-size: 4.5rem;
+        @include mobile{
+            font-size: 39px;
+        }
 
 }
 
 .wrapper{
     background-image: url("../../../public/star_bacground.webp");
     background-repeat: no-repeat;
-    background-size:cover;
-    height: 100vh;
+    background-size:contain;
+    //height: 1080px;
     //transform: translate(0, -8.875rem);
+}
+
+.main-container{
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+    max-height:fit-content;
 }
 
 .hide{
