--- a/styles/scss/elements/_navigation.scss
+++ b/styles/scss/elements/_navigation.scss
@@ -8,9 +8,12 @@
     color: $color-white;
     font-size: 1.25rem;
 
-    // @include mobile{
-    //     justify-content:center;
-    // }
+    @include mobile{
+        height: 4rem;
+        //max-width: 65%;
+        //min-width: 50%;
+        //margin: auto;
+    }
     
     &-container{
         display: inline-block;
@@ -18,6 +21,7 @@
     }
 
     li{
+        //margin: 0 0.5rem;
         a{
             color:$color-white;
             text-decoration: none;
@@ -61,7 +65,22 @@
 .logo{
     font-weight: bold;
     text-transform: uppercase;
+    // flex: 1;
+    // text-align: center;
     // @include mobile{
     //     justify-self: center;
     // }
+}
+
+// .nav li {
+//     flex: 1;
+//     text-align: center;
+//   }
+  
+//   .nav .logo {
+//     text-align: center;
+//   }
+.dummy{
+    width: 2rem;
+    height: 35px;
 }
