--- a/styles/scss/settings/_colors.scss
+++ b/styles/scss/settings/_colors.scss
@@ -1,8 +1,9 @@
 //$color-grey: #8E9696; //fonts
 //$color-black: #213131; //fonts
-$color-white: #FFFFFF; //fonts and background
-//$color-white-secondary: #FAFAFA; //some fonts ex. in slider
+$color-white: #FFFFFF; //fonts 
+$color-white-secondary: #EDEDED; //fonts
+$color-grey: #BDC5E2; //fonts
 //$color-background: #E5E5E5; //background color
 //$color-light-grey: #D6D6D6; //decoration lines
 //$color-black-secondary: #4B4B4B;
-//$color-black-tertiary: #000000; // page subtitle color
+//$color-black-tertiary: #000000; // page subtitle colorBDC5E2
