added planet switcher

--- a/styles/scss/elements/_sliderSection.scss
+++ b/styles/scss/elements/_sliderSection.scss
@@ -1,7 +1,7 @@
 .nav-box{
     
     &__main{
-        background-image: url(../../../public/sun.webp);
+        background-image: url(../../../public/planet0.webp);
         background-repeat: no-repeat;
         background-size:cover;
         width: 34vw;
@@ -37,7 +37,7 @@
             // height: 250px;
             width: 8vw;
             height: 8vw;
-            background-image: url(../../../public/neptune.webp);
+            // background-image: url(../../../public/neptune.webp);
             background-repeat: no-repeat;
             background-size:cover;
         }
@@ -54,7 +54,7 @@
             // height: 250px;
             width: 8vw;
             height: 8vw;
-            background-image: url(../../../public/mercury.webp);
+            //background-image: url(../../../public/planet1.webp);
             background-repeat: no-repeat;
             background-size:cover;
         }
