--- a/styles/scss/elements/_sliderSection.scss
+++ b/styles/scss/elements/_sliderSection.scss
@@ -10,19 +10,19 @@
         max-height: 691px;
 
 
-        &::before{
-            content: "";
-            display: block;
-            position:relative;
-            width: 100%;
-            height: 100%;   
-            background-image: url(../../../public/solar_system_sq.webp);
-            background-repeat: no-repeat;
-            background-size:cover;
-            transform: translate(0, 30%) rotate(0deg);
-            z-index: -1;
+        // &::before{
+        //     // content: "";
+        //     // display: block;
+        //     // position:relative;
+        //     // width: 100%;
+        //     // height: 100%;   
+        //     // background-image: url(../../../public/solar_system_sq.webp);
+        //     // background-repeat: no-repeat;
+        //     // background-size:cover;
+        //     // //transform: translate(0, 30%) rotate(40deg);
+        //     // z-index: -1;
                 
-        }
+        // }
     
     }
     &__left{
@@ -73,3 +73,12 @@
     justify-content: space-between;
     align-items: center;
 }
+
+// @keyframes rotateAnimation {
+//     from {
+//       transform: rotate(0deg);
+//     }
+//     to {
+//       transform: rotate(40deg);
+//     }
+//   }
