--- a/styles/scss/elements/_sliderSection.scss
+++ b/styles/scss/elements/_sliderSection.scss
@@ -64,6 +64,7 @@
         color: $color-white-secondary;
         font-size: 28px;
         text-transform: uppercase;
+        min-width: 9.375rem;
     }
 }
 
