added counters code, some changes in css

--- a/styles/scss/elements/_sliderSection.scss
+++ b/styles/scss/elements/_sliderSection.scss
@@ -65,6 +65,10 @@
         font-size: 28px;
         text-transform: uppercase;
         min-width: 9.375rem;
+
+        &--right{
+            text-align: right;
+        }
     }
 }
 
